# EclipsingBinaries

./: .codacy.yml  .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-publish.yml
EclipsingBinaries/: IRAF_Reduction.py  OC_plot.py  OConnell.py  apass.py  color_light_curve.py  gaia.py  menu.py  multi_aperture_photometry.py  pipeline.py  tess_data_search.py
changelog/: package-lock.json
docs/: conf.py  installation.rst  pipeline.rst  toolbox.rst
tests/: test_OC_plot.py  test_OConnell.py  test_apass.py  test_gaia.py  test_multi_aperture_photometry.py  test_tess_data_search.py
