[metadata]
name = EclipsingBinaries
description = "Binary Star Package for Ball State University's Astronomy Research Group"
long_description = file:README.md
long_description_content_type = text/markdown
url = https://eclipsingbinaries.readthedocs.io/
author = Kyle Koeller
license = MIT
github_project = kjkoeller/EclipsingBinaries

[options]
packages = find:
zip_safe = False
install_requires =
    astropy>=6.0
    astroquery>=0.4.6
    ccdproc>=2.4.0
    matplotlib>=3.7.1
    numpy>=1.26
    pandas>=2.1.0
    PyAstronomy>=0.18.1
    scipy>=1.11.2
    statsmodels>=0.14
    tqdm>=4.64.1
    numba>=0.59.0
    seaborn>=0.12.2
    pyia>=1.4
    photutils>=1.8.0
    tkinterdnd2>=0.4.3
    tkmacosx>=1.0.4; sys_platform == "darwin"
python_requires = >=3.12
include_package_data = True

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx-astropy
    matplotlib
    furo

[options.packages.find]
exclude =
    EclipsingBinaries.examples

[options.entry_points]
console_scripts =
    EclipsingBinaries = EclipsingBinaries.menu:main
    EB_pipeline = EclipsingBinaries.pipeline:monitor_directory
    EB_HCorr = EclipsingBinaries.headerCorrect:header_correct

[pycodestyle]
select = E101,E111,E112,E113,E221,E222,E223,E224,E225,E241,E242,E251,E271,E272,E303,E304,E502,E703,E901,E902,W191,W291,W292,W293,W391

[flake8]
max-line-length = 100
